Overlap issue fixed

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -16,7 +16,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.8);
-  z-index: 1;
+  z-index: 98;
   border-radius: 5px;
 }
 
@@ -36,7 +36,7 @@
     -12.72984px -12.72984px 0 0 rgba(10, 180, 175, 0);
   left: 50%;
   top: 50%;
-  z-index: 2;
+  z-index: 99;
   border-radius: 50%;
   animation: dotSpin 1s linear infinite;
 }
@@ -49,7 +49,7 @@
 
 .onlySpinner:after {
   content: "";
- margin: auto;
+  margin: auto;
   height: 10px;
   width: 10px;
   display: block;
@@ -61,7 +61,7 @@
     -12.72984px 12.72984px 0 0 rgba(10, 180, 175, 0),
     -18px 0 0 0 rgba(10, 180, 175, 0),
     -12.72984px -12.72984px 0 0 rgba(10, 180, 175, 0);
-  z-index: 2;
+  z-index: 99;
   border-radius: 50%;
   animation: dotSpin 1s linear infinite;
 }
